# clawos

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  claw-forge.yaml
.github/ISSUE_TEMPLATE/: feature_request.md  hardware_request.md
.github/workflows/: ci.yml  claw-forge-bot.yml
claw-agent-registry/: Cargo.toml
claw-agent-registry/src/: lib.rs  models.rs  registry.rs  spawner.rs
claw-chain-bridge/: Cargo.toml
claw-chain-bridge/src/: lib.rs
claw-init/: Cargo.toml
claw-init/src/: main.rs
claw-mqtt/: Cargo.toml
claw-mqtt/src/: lib.rs
claw-watchdog/: Cargo.toml
claw-watchdog/src/: lib.rs
clawd/: Cargo.toml
clawd/src/: config.rs  handlers.rs  main.rs  server.rs
clawd/tests/: api_integration.rs
clawos-daemon/: Cargo.toml
clawos-daemon/src/: config.rs  main.rs
config/: default.toml  pi.toml
docs/: ARCHITECTURE.md  HARDWARE.md  ROADMAP.md  VISION.md
