[package]
name = "claw-agent-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent registry with DashMap store, models, and process spawner for ClawOS"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
