[package]
name = "clawos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ClawOS init daemon — HTTP API, config loader, signal handler"

[[bin]]
name = "clawos"
path = "src/main.rs"

[dependencies]
claw-agent-registry = { path = "../claw-agent-registry" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = "5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
axum-test = "16"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
